# cwsf

./: .gitignore  README.md  pyproject.toml
cwsf/: __init__.py  cli.py
cwsf/config/: loader.py  schema.py  validator.py  watcher.py
cwsf/core/: job.py  orchestrator.py  queue.py
cwsf/engine/: fetcher.py  orchestrator.py  paginator.py  parser.py  rate_limiter.py  transforms.py
cwsf/output/: __init__.py  base.py  sqlite_writer.py  webhook_writer.py
cwsf/utils/: logging.py  notifications.py  run_history.py
